// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with a single expense 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $234.50
  </h1>
</div>
`;

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $15.00
  </h1>
</div>
`;
